<resources>
    <string name="app_name">PhysicalActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="resetCr">Reset</string>
    <string name="pokaziRez">Pokazi</string>
    <string name="email">Unesi email:</string>
    <string name="sifra">Unesi sifru:</string>
    <string name="login">Prijavi se</string>
    <string name="textview">TextView</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyDm_s9UqGcF8zph-wiScfKjreyFfAm1tHs</string>
    <string name="Z">Z</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="resetsteps">ResetSteps</string>
    <string name="dots">---</string>
    <string name="lattitude">Brzina u m/s:</string>
    <string name="dots2">---</string>
    <string name="longitude">Brzina u km/h:</string>
    <string name="locdses">---</string>
    <string name="pokreni">Pokreni</string>
    <string name="state">država</string>
    <string name="homead">homeadr</string>
    <string name="korisnik">korisnik</string>
    <string name="speed">speed</string>
    <string name="kmnah">Km/h</string>
    <string name="ulica">ulica</string>
    <string name="gradpost">poštanski broj i naziv grada</string>
    <string name="st">Država</string>
    <string name="udaljenost">Udaljenost</string>
    <string name="vrijemestart">Startaj</string>
    <string name="vrijemestop">Pauziraj</string>
    <string name="fail"></string>
    <string name="reset">Resetiraj</string>
    <string name="setnja">Šetnja</string>
    <string name="vrijeme_provedeno_u_e">Vrijeme_u_šetnji</string>
    <string name="prijedjeni_kilometri">Prijeđeni_kilometri</string>
    <string name="prosjecna_brzina">Prosječna_brzina</string>
    <string name="vus">...</string>
    <string name="pk">...</string>
    <string name="pb">...</string>
    <string name="bk">Ukupan broj koraka</string>
    <string name="ukbrkor">...</string>
    <string name="trcanje">Trcanje</string>
    <string name="vrijeme_trcanja">Vrijeme trčanja</string>
    <string name="vrtr">...</string>
    <string name="brojprkmtr">Prijeđeni_kilometri</string>
    <string name="prkmtr">...</string>
    <string name="bicikliranje">Bicikliranje</string>
    <string name="vrijeme_u_bicikliranju">Vrijeme u bicikliranju</string>
    <string name="adresa">Adresa</string>
    <string name="ukupni">Ukupni rezultati:</string>
    <string name="ukupno_koraka">Ukupno koraka:</string>
    <string name="ukupnovrijeme">UkupnoVrijeme</string>
    <string name="ukupna_udaljenost">Ukupna udaljenost:</string>
    <string name="ukupno_prosjecna_brzina">Ukupno prosjecna brzina</string>
    <string name="Starting">Dobrodošli u aplikaciju. Aplikaciju koristite prvi put, pa će vam trebati
        određena pomoć kako da koristite tu aplikaciju. Za početak, kliknite pokreni kako biste se prijavili u aplikaciju.
    </string>
    <string name="nijeAutoriziran">Korisnik nije autentificiran. Vjerojatno nije niti registriran u bazi. Molimo vas, registrirajte se
    da biste mogli koristiti aplikaciju.</string>
    <string name="prijava">Da biste se prijavili, unesite korisnicko ime i lozinku, prije toga pricekajte da se pojavi gumb za prijavu.
    Nakon toga, mozete kliknuti gumb za prijavu, naravno sa unesenim korisnickim imenom i lozinkom.</string>
    <string name="internetVeza">Ne postoji internet veza. Ne možete dalje.</string>
    <string name="lista">Kako biste pokrenuli pojedinu aktivnost, kliknite na neki od ponuđenih elemenata. Nakon toga otvara se aktivnost.</string>
    <string name="walkingTutor">Da biste mjerirli korake, moguće je poboljšavati osjetljivost na seek baru. Kada se poboljša, možete
    mjeriti svoje korake. Za kronometar imate tri mogućnosti za pokretanje resetiranje i pauziranje. Senzor poslije registrira pokret i mjeri korake, a
    senzori mjere i brzinu i udaljenost.</string>
    <string name="Pocetna">Dobrodošli u aplikaciju za praćenje fizičke aktivnosti. Osobni podaci služe u aplikaciji samo korisniku. Preporuča se da korisnik ne koristi šifru za aplikaciju koju ima za neki drugi račun kako bi se korisnikovi podaci zaštitili. Korisnički podaci se u ni kojem slučaju ne prosljeđuju. Klikom na gumb pokreni, korisnik se slaže sa uvjetima i prihvaća korištenje aplikacije uz svoje dane podatke. Autor ove aplikacije neće zloupotrijebiti korisnikove podatke niti u kojem slučaju prosljeđivati podatke drugima.</string>
    <string name="izbrisi_podatke">Izbrisi podatke</string>
</resources>
