<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/unipulogolat"
    android:orientation="vertical"
    tools:context="activity.physical.example.com.josip.physicalactivity.Bicikliranje">



    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <Chronometer
                    android:id="@+id/chronometer4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginEnd="80dp"
                    android:layout_marginStart="70dp"
                    android:paddingTop="15dp"
                    android:textSize="18sp"
                    />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    >

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <Button
                                    android:id="@+id/startch"
                                    android:layout_width="match_parent"
                                    android:textSize="12sp"
                                    android:layout_height="30dp"
                                    android:text="@string/vrijemestart" />

                                <Button
                                    android:id="@+id/stopch"
                                    android:layout_width="match_parent"

                                    android:textSize="12sp"
                                    android:layout_height="30dp"
                                    android:text="@string/vrijemestop" />

                                <Button
                                    android:id="@+id/resetch"
                                    android:layout_width="match_parent"
                                    android:textSize="12sp"
                                    android:layout_height="30dp"
                                    android:text="@string/reset" />
                            </LinearLayout>
                        </LinearLayout>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/brzina"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speed" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/brzinakm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kmnah" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/ulica"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ulica" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/postbrngr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gradpost" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/drzava"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/state" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/korisnik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/korisnik" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/udaljenost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/udaljenost" />
                    </TableRow>


                </TableLayout>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>


</LinearLayout>
