<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/unipulogolat"
    android:orientation="vertical"
    tools:context="activity.physical.example.com.josip.physicalactivity.RezultActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:stretchColumns="1">



                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/vrijeme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/setnja"
                                android:textAlignment="viewStart"
                                android:textStyle="bold" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/ubk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bk" />

                            <TextView
                                android:id="@+id/ukbk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/ukbrkor" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/setnja"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vrijeme_provedeno_u_e" />

                            <TextView
                                android:id="@+id/vus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/vus" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/brojkm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/prijedjeni_kilometri" />

                            <TextView
                                android:id="@+id/pk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/pk" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/prospe"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/prosjecna_brzina" />

                            <TextView
                                android:id="@+id/pb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/pb" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="10dp">

                            <TextView
                                android:id="@+id/trcanje"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/trcanje"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/vrut"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vrijeme_trcanja" />

                            <TextView
                                android:id="@+id/vrt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/vrtr" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/brojkmt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/brojprkmtr" />

                            <TextView
                                android:id="@+id/prkrutr"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/prkmtr" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/probrzutrc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/prosjecna_brzina" />

                            <TextView
                                android:id="@+id/probrztrc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/pb" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="5dp" >

                            <TextView
                                android:id="@+id/bicikl"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="10dp"
                                android:text="@string/bicikliranje"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:id="@+id/vrijubic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vrijeme_u_bicikliranju" />

                            <TextView
                                android:id="@+id/vrbic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/pb" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:id="@+id/prkmubicik"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/prijedjeni_kilometri" />

                            <TextView
                                android:id="@+id/prkmubic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/pb" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:id="@+id/probrzubicikl"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/prosjecna_brzina" />

                            <TextView
                                android:id="@+id/prbrubic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/pb" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
