<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/unipulogolat"
    android:orientation="vertical"
    tools:context="activity.physical.example.com.josip.physicalactivity.MainActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/TextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType=""
                    tools:ignore="LabelFor,TextFields" />

                <TextView
                    android:id="@+id/SifraText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sifra" />

                <EditText
                    android:id="@+id/sifra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/Loginbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="prijava"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</LinearLayout>
